--- a/styles.css
+++ b/styles.css
@@ -2,72 +2,124 @@
   margin: 0;
   padding: 0%;
 }
-html{
+html {
   font-size: 10px;
 }
-body{
+@font-face {
+  font-family: myOdin;
+  src: url(Norse-Bold.otf);
+}
+body {
   display: grid;
   place-items: center;
   background-color: #000;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .container {
   height: 100vh;
   width: 70%;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  background-color: red;
 }
-.sidebar {
-  background: url("./halie-west-25xggax4bSA-unsplash.jpg");
+.left-side {
+  background-image: url(halie-west-25xggax4bSA-unsplash.jpg);
   background-size: cover;
+  font-family: myOdin;
 }
-.right-side{
+.logo {
+  background-color: rgba(0, 0, 0, 0.409);
+  width: 100%;
+  height: 15%;
+  margin-top: 13.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo p {
+  font-size: 7rem;
+  color: #fff;
+}
+.logo img {
+  height: 80%;
+  width: 20%;
+}
+.right-side {
   background-color: #fff;
   width: 100%;
   display: grid;
-  grid-template-rows: repeat(3,1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
-.first-box{
-  background-color: #F9FAFB;
+.first-box {
+  background-color: #f9fafb;
   padding: 3rem;
   display: grid;
   align-items: self-end;
 }
-.second-box{
+.second-box {
   background-color: #fff;
   padding: 1rem;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.326);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.326);
   z-index: 1;
-  }
-form{
+}
+.form {
   width: 80%;
-  height: 90%;
+  height: 20rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
 }
-.last-box{
-  background-color: #F9FAFB;
+.last-box {
+  background-color: #f9fafb;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
-.first-box p{
+.first-box p {
   font-size: large;
-  font-weight: bold;
 }
-.get-data{
+.get-data {
   display: flex;
   flex-direction: column;
 }
-input{
+input {
   width: 20rem;
   height: 2.3rem;
   border: 1px solid rgba(150, 150, 150, 0.258);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
+  outline: none;
 }
-label{
-  letter-spacing: 1%;
+label {
+  letter-spacing: 1px;
+  color: rgba(0, 0, 0, 0.774);
 }
-.form-header{
-  margin-left: 3rem;
+.form-header {
+  margin-left: 3.5rem;
   font-size: 2rem;
+}
+.submit-btn {
+  height: 3.5rem;
+  width: 17rem;
+  border-radius: 0.5rem;
+  background-color: #596d48;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+}
+.log-in {
+  font-size: 15px;
+  cursor: pointer;
+}
+.log-in > a {
+  text-decoration: none;
+  color: #596d48;
+}
+input:invalid {
+  border: 1px solid red;
+}
+input:focus {
+  border: 1px solid rgb(42, 88, 241);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.217);
 }
